--- a/css/app.css
+++ b/css/app.css
@@ -31,3 +31,15 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+.header{
+    width: 100%;
+    min-width: 5em;
+    background: red;
+}
+.header .h1{}
+.header .h1.a{}
+.header .nav{}
+.header .nav .ul{}
+.header .nav .ul .li{}
+.header .nav .ul .li .a{}
