--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,7 @@ img {
     object-position: center center;
 }
 
-a {
+a, ul, li {
     display: block;
     text-decoration: none;
     color: inherit;
@@ -34,12 +34,78 @@ a {
 
 .header{
     width: 100%;
-    min-width: 5em;
-    background: red;
+    min-height: 5em;
+
+    padding: 1em 2em;
+    
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
 }
-.header .h1{}
+
+.header .h1{
+
+}
 .header .h1.a{}
-.header .nav{}
-.header .nav .ul{}
-.header .nav .ul .li{}
-.header .nav .ul .li .a{}
+.header .nav{
+
+}
+.header .ul{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.header .li{
+    margin: 0 1em;
+
+}
+.header .li .a{}
+
+.main {
+    background: lightgrey;
+    margin: 1em 0;
+    text-align: center;
+}
+
+.seccion {
+    width: 100%;
+    min-height: 80vh;
+    background: lightblue;
+    margin: 1em 0;
+    padding: 2em;
+
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+.seccion .circulos{}
+.seccion .circulo{}
+.seccion .h2 {}
+.seccion .h3 {}
+
+.seccion .p {}
+.seccion .grid {
+    width: 90%;
+    background: lightcoral;
+
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax( 1fr, 10rem));
+}
+.seccion .article {
+    width: 100%;
+    background: lightgoldenrodyellow;
+}
+.seccion .a {}
+.seccion .img{}
+.seccion .h4{}
+
+.about {}
+.about .h2{}
+.about .p{}
+.about .rrss{}
+.about .li{}
+.about .a{}
+.about .svg {}
