--- a/css/app.css
+++ b/css/app.css
@@ -18,13 +18,20 @@
   vertical-align: baseline;
 }
 
-img {
+img, figure {
     max-width: 100%;
     width: 100%;
     display: flex;
     object-fit: cover;
     object-position: center center;
 }
+
+article {
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-sizing: border-box;
+  }
 
 a, ul, li {
     display: block;
@@ -89,23 +96,85 @@ a, ul, li {
 .seccion .p {}
 .seccion .grid {
     width: 90%;
+    max-width: 40em;
     background: lightcoral;
+    margin: 1em 0;
 
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax( 1fr, 10rem));
+    grid-template-columns: repeat( auto-fit, minmax( 10rem, 1fr));
+    gap: 1em;
 }
 .seccion .article {
     width: 100%;
+    min-height: 20vh;
     background: lightgoldenrodyellow;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
 }
 .seccion .a {}
-.seccion .img{}
-.seccion .h4{}
+.seccion .figure {
+    width: 100%;
+    background: red;
+}
+
+.seccion .img { 
+    width: 100%;
+    background: lime;
+}
+ 
+.seccion .h4{
+    width: 100%;
+    height: 50%;
+    background: coral;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
 
 .about {}
-.about .h2{}
-.about .p{}
-.about .rrss{}
-.about .li{}
+.about .h2{
+    margin: 0 0  1rem;
+}
+.about .p{
+    max-width: 40em;
+    background: lime;
+    margin: 0 0 1em;
+    text-align: left;
+}
+.about .rrss{
+    width: 100%;
+    background: lightgreen;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.about .li{
+    background: orange;
+    margin: 0 1em;
+}
 .about .a{}
-.about .svg {}
+.about .svg {
+    width: 3em;
+    height: 3em;
+    background: red;
+}
+
+.footer {
+    background-color: lightpink;
+    padding: 2em 0;
+    text-align: center;
+}
+.footer .span {
+    
+}
