--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,10 @@
   vertical-align: baseline;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 img, figure {
     max-width: 100%;
     width: 100%;
@@ -72,7 +76,7 @@ a, ul, li {
 
 .main {
     background: lightgrey;
-    margin: 1em 0;
+    margin: 0 0 1em;
     text-align: center;
 }
 
@@ -88,10 +92,50 @@ a, ul, li {
     justify-content: center;
     align-items: center;
 }
+
+.seccion .info {
+    font-size: 2em;
+}
+
 .seccion .circulos{}
 .seccion .circulo{}
-.seccion .h2 {}
-.seccion .h3 {}
+.seccion .ul {
+    /*background: red;*/
+    margin: 2em 0 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.seccion .ul .li {
+    /*background: chartreuse;*/
+    margin: 0 1em;
+}
+.seccion .ul  .a {
+    border: 1px solid  rgba(0, 0, 0, .4);
+
+    padding: 1em 1em 1em;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: all .5s ease;
+   
+}
+.seccion .ul  .a:hover {
+    background: black;
+    color: white;
+}
+.seccion .h2 {
+    font-family: var(--tipo-titulo);
+    font-weight: 800;
+    font-size: 5em;
+    line-height: 1em;
+}
+.seccion .h3 {
+    font-family: var(--tipo-titulo);
+    font-size: 3.6em;
+    font-weight: 400;
+    
+}
 
 .seccion .p {}
 .seccion .grid {
@@ -129,8 +173,8 @@ a, ul, li {
  
 .seccion .h4{
     width: 100%;
-    height: 50%;
-    background: coral;
+    height: 100%;
+    background-color: rgba(255, 255, 255,.5);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -141,6 +185,9 @@ a, ul, li {
     align-items: center;
 }
 
+.works .h2 {
+    margin: 0 0 1rem;
+}
 .about {}
 .about .h2{
     margin: 0 0  1rem;
@@ -165,13 +212,13 @@ a, ul, li {
 }
 .about .a{}
 .about .svg {
-    width: 3em;
-    height: 3em;
-    background: red;
+    width: 2em;
+    height: 2em;
+    /*background: red;*/
 }
 
 .footer {
-    background-color: lightpink;
+    /*background-color: lightpink;*/
     padding: 2em 0;
     text-align: center;
 }
