--- a/css/app.css
+++ b/css/app.css
@@ -159,6 +159,7 @@ a, ul, li {
     align-items: center;
 
     position: relative;
+    overflow: hidden;
 }
 .seccion .a {}
 .seccion .figure {
@@ -174,7 +175,8 @@ a, ul, li {
 .seccion .h4{
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255,.5);
+    background-color: rgba(0, 0, 0,.5);
+    backdrop-filter: blur(.10rem);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -183,6 +185,19 @@ a, ul, li {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+
+    color: white;
+    font-size: 1em;
+    font-style: italic;
+    font-family: var(--tipo-principal);
+    transform:translateZ(1) scale(1.2);
+    opacity: 0;
+    transition: all .5s ease;
+}
+
+.seccion .article:hover .h4{
+    opacity: 1;
+    transform:translateZ(1) scale(1);
 }
 
 .works .h2 {
