--- a/css/app.css
+++ b/css/app.css
@@ -19,225 +19,271 @@
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-img, figure {
-    max-width: 100%;
-    width: 100%;
-    display: flex;
-    object-fit: cover;
-    object-position: center center;
+img,
+figure {
+  max-width: 100%;
+  width: 100%;
+  display: flex;
+  object-fit: cover;
+  object-position: center center;
 }
 
 article {
-    margin: 0;
-    padding: 0;
-    border: none;
-    box-sizing: border-box;
-  }
-
-a, ul, li {
-    display: block;
-    text-decoration: none;
-    color: inherit;
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
 }
 
-.header{
-    width: 100%;
-    min-height: 5em;
-
-    padding: 1em 2em;
-    
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
+a,
+ul,
+li {
+  display: block;
+  text-decoration: none;
+  color: inherit;
 }
 
-.header .h1{
+body {
+  font-family: var(--tipo-principal);
+  font-size: 100%;
+  min-height: 100vh;
+  background-color: var(--blanco);
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
+.circulos {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: lightblue;
+  z-index: 1;
 }
-.header .h1.a{}
-.header .nav{
+.circulos .circulo {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+}
 
+.circulos .circulo1 {
+  top: 0%;
+  left: 0%;
 }
-.header .ul{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-.header .li{
-    margin: 0 1em;
 
+.circulos .circulo2 {
+  top: 0%;
+  right: 0%;
 }
-.header .li .a{}
+
+.circulos .circulo3 {
+  bottom: 0%;
+  left: 0%;
+}
+
+.circulos .circulo4 {
+  bottom: 0%;
+  right: 0%;
+}
+
+.header {
+  width: 100%;
+  min-height: 5em;
+
+  padding: 1em 2em;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .h1 {
+}
+.header .h1.a {
+}
+.header .nav {
+}
+.header .ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .li {
+  margin: 0 1em;
+}
+.header .li .a {
+}
 
 .main {
-    background: lightgrey;
-    margin: 0 0 1em;
-    text-align: center;
+  background: lightblue;
+  margin: 0 0 1em;
+  text-align: center;
 }
 
 .seccion {
-    width: 100%;
-    min-height: 80vh;
-    background: lightblue;
-    margin: 1em 0;
-    padding: 2em;
+  width: 100%;
+  min-height: 80vh;
+  background-color: lightblue;
+  margin: 1em 0;
+  padding: 2em;
 
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .seccion .info {
-    font-size: 2em;
+  font-size: 2em;
 }
 
-.seccion .circulos{}
-.seccion .circulo{}
 .seccion .ul {
-    /*background: red;*/
-    margin: 2em 0 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
+  /*background: red;*/
+  margin: 2em 0 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
 .seccion .ul .li {
-    /*background: chartreuse;*/
-    margin: 0 1em;
+  /*background: chartreuse;*/
+  margin: 0 1em;
 }
-.seccion .ul  .a {
-    border: 1px solid  rgba(0, 0, 0, .4);
+.seccion .ul .a {
+  border: 1px solid rgba(0, 0, 0, 0.4);
 
-    padding: 1em 1em 1em;
-    text-transform: uppercase;
-    font-weight: 600;
-    transition: all .5s ease;
-   
+  padding: 1em 1em 1em;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: all 0.5s ease;
 }
-.seccion .ul  .a:hover {
-    background: black;
-    color: white;
+.seccion .ul .a:hover {
+  background: black;
+  color: white;
 }
 .seccion .h2 {
-    font-family: var(--tipo-titulo);
-    font-weight: 800;
-    font-size: 5em;
-    line-height: 1em;
+  font-family: var(--tipo-titulo);
+  font-weight: 800;
+  font-size: 5em;
+  line-height: 1em;
 }
 .seccion .h3 {
-    font-family: var(--tipo-titulo);
-    font-size: 3.6em;
-    font-weight: 400;
-    
+  font-family: var(--tipo-titulo);
+  font-size: 3.6em;
+  font-weight: 400;
 }
 
-.seccion .p {}
+.seccion .p {
+}
 .seccion .grid {
-    width: 90%;
-    max-width: 40em;
+  width: 90%;
+  max-width: 40em;
 
-    margin: 1em 0;
+  margin: 1em 0;
 
-    display: grid;
-    grid-template-columns: repeat( auto-fit, minmax( 10rem, 1fr));
-    gap: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  gap: 1em;
 }
 .seccion .article {
-    width: 100%;
-    min-height: 20vh;
-    background: lightgoldenrodyellow;
+  width: 100%;
+  min-height: 20vh;
+  background: lightgoldenrodyellow;
 
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
-.seccion .a {}
+.seccion .a {
+}
 .seccion .figure {
-    width: 100%;
-    background: red;
+  width: 100%;
+  /* background: red; */
 }
 
-.seccion .img { 
-    width: 100%;
-    background: lime;
-}
- 
-.seccion .h4{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0,.5);
-    backdrop-filter: blur(.10rem);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-
-    color: white;
-    font-size: 1em;
-    font-style: italic;
-    font-family: var(--tipo-principal);
-    transform:translateZ(1) scale(1.2);
-    opacity: 0;
-    transition: all .5s ease;
+.seccion .img {
+  width: 100%;
+  /* background: lime; */
 }
 
-.seccion .article:hover .h4{
-    opacity: 1;
-    transform:translateZ(1) scale(1);
+.seccion .h4 {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(0.1rem);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+
+  color: white;
+  font-size: 1em;
+  font-style: italic;
+  font-family: var(--tipo-principal);
+  transform: translateZ(1) scale(1.2);
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.seccion .article:hover .h4 {
+  opacity: 1;
+  transform: translateZ(1) scale(1);
 }
 
 .works .h2 {
-    margin: 0 0 1rem;
+  margin: 0 0 1rem;
 }
-.about {}
-.about .h2{
-    margin: 0 0 2rem;
+.about {
 }
-.about .p{
-    max-width: 40em;
-    /* background: lime; */
-    margin: 0 0 2rem;
-    font-size: 1.5em;
-    text-align: left;
+.about .h2 {
+  margin: 0 0 2rem;
 }
-.about .rrss{
-    width: 100%;
-    /* background: lightgreen; */
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
+.about .p {
+  max-width: 40em;
+  /* background: lime; */
+  margin: 0 0 2rem;
+  font-size: 1.5em;
+  text-align: left;
 }
-.about .li{
-    /* background: orange; */
-    margin: 0 1em;
+.about .rrss {
+  width: 100%;
+  /* background: lightgreen; */
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
-.about .a{}
+.about .li {
+  /* background: orange; */
+  margin: 0 1em;
+}
+.about .a {
+}
 .about .svg {
-    width: 3em;
-    height: 3em;
-    /*background: red;*/
+  width: 3em;
+  height: 3em;
+  /*background: red;*/
 }
 
 .footer {
-    /*background-color: lightpink;*/
-    padding: 2em 0;
-    text-align: center;
+  /*background-color: lightpink;*/
+  padding: 2em 0;
+  text-align: center;
 }
 .footer .span {
-    
 }
