--- a/css/app.css
+++ b/css/app.css
@@ -64,31 +64,47 @@ body {
   left: 0;
   background-color: lightblue;
   z-index: 1;
+  filter: blur(70px);
+  animation:circulo1 20s linear infinite both;
 }
 .circulos .circulo {
   position: absolute;
   width: 50%;
   height: 50%;
+  animation:circulo1 100s linear infinite both;
 }
 
 .circulos .circulo1 {
   top: 0%;
   left: 0%;
+  
 }
 
+.circulos .circulo1 .path {
+    fill: seagreen;
+}
 .circulos .circulo2 {
   top: 0%;
   right: 0%;
+}
+.circulos .circulo2 .path {
+    fill: rgb(46, 13, 165);
 }
 
 .circulos .circulo3 {
   bottom: 0%;
   left: 0%;
 }
+.circulos .circulo3 .path {
+    fill: rgba(165, 127, 1);
+}
 
 .circulos .circulo4 {
   bottom: 0%;
   right: 0%;
+}
+.circulos .circulo4 .path {
+    fill: rgb(0, 59, 155);
 }
 
 .header {
@@ -122,15 +138,15 @@ body {
 }
 
 .main {
-  background: lightblue;
   margin: 0 0 1em;
   text-align: center;
+  position: relative;
+  z-index: 2;
 }
 
 .seccion {
   width: 100%;
   min-height: 80vh;
-  background-color: lightblue;
   margin: 1em 0;
   padding: 2em;
 
@@ -286,4 +302,16 @@ body {
   text-align: center;
 }
 .footer .span {
+}
+
+
+
+
+@keyframes circulo1{
+    from{
+        transform:rotate(0deg) scale(3);
+    }
+    to{
+        transform:rotate(360deg) scale(3);
+    }
 }
