--- a/css/app.css
+++ b/css/app.css
@@ -50,7 +50,8 @@ body {
   font-family: var(--tipo-principal);
   font-size: 100%;
   min-height: 100vh;
-  background-color: var(--blanco);
+  background-color: var(--negro);
+  color: var(--blanco);
   font-smooth: always;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -62,10 +63,9 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: lightblue;
   z-index: 1;
-  filter: blur(70px);
-  animation:circulo1 20s linear infinite both;
+  filter: blur(40px);
+  animation:circulo1 100s linear infinite both;
 }
 .circulos .circulo {
   position: absolute;
@@ -119,12 +119,6 @@ body {
   align-items: center;
 }
 
-.header .h1 {
-}
-.header .h1.a {
-}
-.header .nav {
-}
 .header .ul {
   display: flex;
   flex-flow: row wrap;
@@ -134,8 +128,7 @@ body {
 .header .li {
   margin: 0 1em;
 }
-.header .li .a {
-}
+
 
 .main {
   margin: 0 0 1em;
@@ -181,14 +174,15 @@ body {
   transition: all 0.5s ease;
 }
 .seccion .ul .a:hover {
-  background: black;
-  color: white;
+  background: white;
+  color: black;
 }
 .seccion .h2 {
   font-family: var(--tipo-titulo);
   font-weight: 800;
   font-size: 5em;
   line-height: 1em;
+  color: white;
 }
 .seccion .h3 {
   font-family: var(--tipo-titulo);
@@ -196,8 +190,7 @@ body {
   font-weight: 400;
 }
 
-.seccion .p {
-}
+
 .seccion .grid {
   width: 90%;
   max-width: 40em;
@@ -221,8 +214,7 @@ body {
   position: relative;
   overflow: hidden;
 }
-.seccion .a {
-}
+
 .seccion .figure {
   width: 100%;
   /* background: red; */
@@ -261,11 +253,15 @@ body {
   transform: translateZ(1) scale(1);
 }
 
+.works {
+    background: white;
+    color: black;
+}
 .works .h2 {
   margin: 0 0 1rem;
+  color: inherit;
 }
-.about {
-}
+
 .about .h2 {
   margin: 0 0 2rem;
 }
@@ -288,8 +284,7 @@ body {
   /* background: orange; */
   margin: 0 1em;
 }
-.about .a {
-}
+
 .about .svg {
   width: 3em;
   height: 3em;
@@ -301,17 +296,16 @@ body {
   padding: 2em 0;
   text-align: center;
 }
-.footer .span {
-}
+
 
 
 
 
 @keyframes circulo1{
     from{
-        transform:rotate(0deg) scale(3);
+        transform:rotate(0deg) scale(2);
     }
     to{
-        transform:rotate(360deg) scale(3);
+        transform:rotate(360deg) scale(2);
     }
 }
