--- a/css/app.css
+++ b/css/app.css
@@ -174,6 +174,10 @@ body {
   text-transform: uppercase;
   font-weight: 600;
   transition: all 0.5s ease;
+  animation: aparecer1 2s ease 1 backwards;
+}
+.seccion .ul>:nth-child(2) .a {
+    animation-delay: .2s;
 }
 .seccion .ul .a:hover {
   background: white;
@@ -316,9 +320,11 @@ body {
 
 @keyframes aparecer1 {
     from{
+        opacity: 0;
         transform: translateY(50%);
     }
     to{
+        opacity: 1;
         transform: translateY(0%);
     }
 }
