--- a/css/app.css
+++ b/css/app.css
@@ -44,6 +44,7 @@ li {
   display: block;
   text-decoration: none;
   color: inherit;
+  cursor: none;
 }
 
 body {
@@ -55,6 +56,7 @@ body {
   font-smooth: always;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  cursor: none;
 }
 
 .circulos {
@@ -204,7 +206,7 @@ body {
   margin: 1em 0;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1em;
 }
 .seccion .article {
@@ -327,4 +329,21 @@ body {
         opacity: 1;
         transform: translateY(0%);
     }
+}
+
+#cursor{
+  width: 5em;
+  height: 5em;
+  background-color: white;
+  position:fixed;
+  top:0;
+  left: 10;
+  z-index: 3;
+  pointer-events: none;
+  border-radius: 50%;
+  mix-blend-mode: difference;
+}
+
+#cursor.mini {
+  transform: scale(0.7);
 }
